added modified capfile and deploy.rb for webpacker

--- a/config/webpacker.yml
+++ b/config/webpacker.yml
@@ -84,6 +84,9 @@ test:
 production:
   <<: *default
 
+  # webpacker production
+  source_entry_path: packs_production
+
   # Production depends on precompilation of packs prior to booting for performance.
   compile: false
 
