--- a/.gitignore
+++ b/.gitignore
@@ -42,7 +42,7 @@ latest.dump
 /node_modules
 yarn-debug.log*
 .yarn-integrity
-.env
+# .env
 
 # Ignore storybook static site generation
 app/javascript/storybook-static/
