--- a/config/webpacker.yml
+++ b/config/webpacker.yml
@@ -85,7 +85,27 @@ production:
   <<: *default
 
   # webpacker production
-  source_entry_path: packs_production
+  # source_entry_path: packs_production
+  # Reference: https://webpack.js.org/configuration/dev-server/
+  dev_server:
+    https: true
+    host: 0.0.0.0
+    port: 3035
+    public: 0.0.0.0:3035
+    hmr: false
+    # Inline should be set to true if using HMR
+    inline: true
+    overlay: true
+    compress: true
+    disable_host_check: true
+    use_local_ip: false
+    quiet: false
+    pretty: false
+    headers:
+      'Access-Control-Allow-Origin': '*'
+    watch_options:
+      ignored: '**/node_modules/**'
+
 
   # Production depends on precompilation of packs prior to booting for performance.
   compile: true
